<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SweatSleep</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="itemMessage">消息</string>
    <string name="itemMyRecord">我的早睡记录</string>
    <string name="itemSetting">设置</string>
    <string name="itemAbout">关于</string>
    <string name="itemFeedback">发表反馈</string>
    <string name="itemExitAccount">退出当前账号</string>

    <dimen name="itemIcon">35dp</dimen>
    <dimen name="itemSpan">23dp</dimen>
    <dimen name="itemBigger">25sp</dimen>
    <dimen name="itemBig">20sp</dimen>

    <string name="title_activity_message">MessageActivity</string>

</resources>
