<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_column" >

    <!-- userImage -->

    <RelativeLayout
        android:id="@+id/rLayout1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#0ca4a9"
        android:gravity="center_horizontal" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:alpha="0.4"
            android:background="@drawable/background_menu" />

        <ImageView
            android:layout_width="148dp"
            android:layout_height="138dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/sideline" />

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/user_image" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rLayout1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <!-- message -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageMessage"
                android:layout_width="@dimen/itemIcon"
                android:layout_height="@dimen/itemIcon"
                android:src="@drawable/message" />

            <Button
                android:id="@+id/buttonMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="#0ca4a9"
                android:onClick="readMessage"
                android:text="@string/itemMessage"
                android:textColor="@color/white"
                android:textSize="@dimen/itemBigger" />

            <ImageView
                android:id="@+id/newMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp" />
        </LinearLayout>

        <!-- myRecord -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/itemSpan"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageMyRecord"
                android:layout_width="@dimen/itemIcon"
                android:layout_height="@dimen/itemIcon"
                android:src="@drawable/my_record" />

            <Button
                android:id="@+id/buttonMyRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="#0ca4a9"
                android:text="@string/itemMyRecord"
                android:textColor="@color/white"
                android:textSize="@dimen/itemBigger" />
        </LinearLayout>

        <!-- setting -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/itemSpan"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageSetting"
                android:layout_width="@dimen/itemIcon"
                android:layout_height="@dimen/itemIcon"
                android:src="@drawable/setting" />

            <Button
                android:id="@+id/buttonSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="#0ca4a9"
                android:text="@string/itemSetting"
                android:textColor="@color/white"
                android:textSize="@dimen/itemBigger" />
        </LinearLayout>

        <!-- about -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/itemSpan"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageAbout"
                android:layout_width="@dimen/itemIcon"
                android:layout_height="@dimen/itemIcon"
                android:src="@drawable/about" />

            <Button
                android:id="@+id/buttonAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="#0ca4a9"
                android:text="@string/itemAbout"
                android:textColor="@color/white"
                android:textSize="@dimen/itemBigger" />
        </LinearLayout>

        <!-- feedback -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/itemSpan"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageFeedback"
                android:layout_width="@dimen/itemIcon"
                android:layout_height="@dimen/itemIcon"
                android:src="@drawable/feedback" />

            <Button
                android:id="@+id/buttonFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="#0ca4a9"
                android:text="@string/itemFeedback"
                android:textColor="@color/white"
                android:textSize="@dimen/itemBigger" />
        </LinearLayout>
    </LinearLayout>

    <!-- eixtAccount -->

    <LinearLayout
        android:layout_width="258dp"
        android:layout_height="88dp"
        android:layout_below="@id/lLayout1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle_rectangle_white"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:background="@drawable/circle_rectangle_cyan"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonExitAccount"
                android:layout_width="240dp"
                android:layout_height="70dp"
                android:background="@drawable/rectangle_cyan"
                android:text="@string/itemExitAccount"
                android:textColor="#0ca4a9"
                android:textSize="@dimen/itemBigger" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>